syntax="proto3";

option go_package="github.com/hritesh04/shooter-game/proto";
import "google/api/annotations.proto";

package serverrpc;

enum Action {
    Movement =0;
    Fire=1;
    Join=2;
    Info=3;
}

enum Direction {
    UP = 0;
    DOWN =1;
    LEFT =2;
    RIGHT=3;
    SHOOT=4;
}

service MovementEmitter {
    // from client send roomID,name get game events
    rpc SendMove(stream Data) returns (stream Data) {
	option (google.api.http) = {
	get: "/v1/sendMove"
	};
    }
    // from root to create room
    rpc CreateRoom(Room) returns (Player) {
	option (google.api.http) = {
	post: "/v1/createRoom"
	body: "*"
	};	
    }
    // from client to get name and position
    rpc JoinRoom(Room) returns (Room) {
	option (google.api.http) = {
	post: "/v1/joinRoom"
	body: "*"
	};	
    }
}

message Data {
    Action type = 1;
    Direction data = 2;
    string roomID = 3;
    string name = 4;
    repeated Player player =5;
}

message Room {
    string id = 1;
    string name = 2;
    repeated Player player = 3;
}

message Player {
    string name = 1;
    float x = 2;
    float y = 3;
}